@@ -2,6 +2,9 @@ This file documents the revision history for Perl web application WomenInBotany.
 
 {{$NEXT}}
 
+    - Fields for year of birth and death are added to the form for botanists
+    - A script for mass correction in the database is added
+
 0.16      2014-09-10 09:42:12+02:00 Europe/Berlin
 
     - field_of_activity is renamed to professional_experience
